--- a/selenium-hub-deployment.yaml
+++ b/selenium-hub-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: selenium-hub
-        image: selenium/hub:3.141
+        image: selenium/hub
         ports:
           - containerPort: 4444
         livenessProbe:
