--- a/selenium-hub-deployment.yaml
+++ b/selenium-hub-deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
       - name: selenium-hub
-        image: selenium/hub
+        image: selenium/hub:3.13.0
         ports:
           - containerPort: 4444
         livenessProbe:
@@ -32,3 +32,12 @@ spec:
             port: 4444
           initialDelaySeconds: 30
           timeoutSeconds: 5
+        resources:
+          limits:
+            memory: "1000Mi"
+            cpu: ".5"
+        env:
+          - name: GRID_TIMEOUT
+            value: "86400"
+          - name: GRID_BROWSER_TIMEOUT
+            value: "86400"
